--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/MrChasen/create-esbase#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.2",
-    "rollup": "^2.75.5"
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "rollup": "^2.75.5",
+    "typescript": "^4.7.3"
   }
 }
