--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Use to create a React project",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c && node index.js"
+    "build": "rollup -c && node index.js",
+    "eslint": "eslint main.ts utils/*.ts"
   },
+  "files": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MrChasen/create-esbase.git"
@@ -23,6 +25,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "husky": "^8.0.1",
     "rollup": "^2.75.5",
     "typescript": "^4.7.3"
   }
